--- a/css/src/userdirectory/material.scss
+++ b/css/src/userdirectory/material.scss
@@ -32,10 +32,3 @@
 		background-color: var(--blue);
 	}
 }
-
-// Show bold gray names (usernames and names of addresses) in the popup.
-.cyclos-user-info-modal.material .name {
-	color: var(--gray-dark);
-	font-weight: 700;
-	margin-bottom: 1em;
-}
