--- a/css/src/userdirectory/ocean.scss
+++ b/css/src/userdirectory/ocean.scss
@@ -32,13 +32,3 @@
 		}
 	}
 }
-
-// Show bold names (usernames and optional names of addresses) in the popup.
-.cyclos-user-info-modal.ocean .name {
-	font-weight: 700;
-
-	&.cyclos-user-text {
-		margin-bottom: 1em;
-	}
-
-}
